Fixed jQuery dialog height on mobile devices

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -106,7 +106,7 @@ p {
     padding: 16px;
     width: 200px;
     font-weight: 500;
-    margin: 18px 5px 5px 5px;
+    margin: 5px 5px 22px 5px;
     text-transform: uppercase;
     color: #fff;
     text-align: center;
